Project-102-Roman-Numerals-Converter/Roman-Numerals-Converter-CFN-Template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
   CloudFormation Template for Roman Numerals Converter Application. 
   This template creates Python Flask Web Application on Amazon Linux 2 
   (ami-05fa00d4c63e32376) EC2 Instance with custom security group 
   allowing http connections on port 80 and SSH connection on port 22. 
   Roman Numerals Converter Application is downloaded from Github 
   repository, then installed on Flask.

Parameters:
  KeyName:
    Description: Select your key pair. 
    Type: AWS::EC2::KeyPair::KeyName
  
Resources:
  mySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable HTTP for Flask Web Server and SSH for secure connection" 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: MySecurityGroup-for-WebServer

  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-05fa00d4c63e32376
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref mySG
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}
      UserData: !Base64 |
        #!/bin/bash
        yum update -y
        yum install python3 -y
        pip3 install flask
        cd /home/ec2-user
        FOLDER="https://raw.githubusercontent.com/cagatayakk/AWS_Projects/main/Project-102-Roman-Numerals-Converter"
        wget ${FOLDER}/app.py
        mkdir templates && cd templates
        wget ${FOLDER}/templates/index.html
        wget ${FOLDER}/templates/result.html
        cd ..
        python3 app.py


        # #!/bin/bash
        # yum update -y
        # yum install git -y
        # pip3 install flask
        # git clone https://github.com/cagatayakk/AWS_Projects.git
        # cd AWS_Projects/Project-102-Roman-Numerals-Converter
        # python3 app.py


Outputs:
  WebSiteUrl:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt myWebServer.PublicDnsName
    Description:  Roman Numerals Converter Application URL
